--- a/styles/postCard.module.css
+++ b/styles/postCard.module.css
@@ -9,12 +9,35 @@
 .postCard{
     color: var(--fontBlack);
     padding: 2rem;
+    border: 1px solid var(--fontGold);
+    margin: 1rem;
+    border-radius: 10px;
 }
 
 .postCard>h1{
-    margin-left: 1rem;
+    padding-left: 1rem;
     color: var(--fontGold);
     font-size: 2rem;
+    border: 1px solid var(--fontGold);
+    background-color: var(--borderGrey);
+    margin-top: 0;
+}
+
+.pageChange{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    justify-items: center;
+    margin: 1rem;
+    font-size: 1.3rem;
+}
+
+.pageChange a{
+    color: var(--fontGold);
+    font-weight: 700;
+    background-color: var(--backgroundWhite);
+    border: 1px solid var(--fontGold);
+    border-radius: 10px;
+    padding: 5px;
 }
 
 
@@ -104,6 +127,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: normal;
+  color: var(--fontBlack);
 }
 
 .tileDetails{
@@ -120,12 +144,17 @@
 .tileDetails h3{
     margin: 0;
     color: var(--fontGold);
-    font-size: .8rem;
+    font-size: 1rem;
 }
 
 .itemDate{
     font-size: small;
     text-align: right;
+    color: var(--fontBlack);
+}
+
+.next{
+    grid-column: 2;
 }
 
 @media screen and (max-width: 900px){
@@ -228,9 +257,8 @@
     }
 
     .postCardTiles{
-        display: grid;
-        grid-template-columns: auto;
-        grid-template-rows: repeat(10, auto);
+        display: flex;
+        flex-direction: column;
         gap: 1rem;
     
     }
@@ -255,7 +283,7 @@
         gap: 1rem;
        display: grid !important;
        grid-template-columns: auto;
-       grid-template-rows: 70% 30%;
+       grid-template-rows: 60% 40%;
        padding-top: 1rem;
     }
 
