--- a/styles/sidebar.module.css
+++ b/styles/sidebar.module.css
@@ -7,7 +7,26 @@
     height: 100vh;
     box-sizing: border-box;
     z-index: 2;
+    padding-top:20vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: var(--fontBlack);
+    gap: 1rem;
+    font-size: 1.3rem;
+
 }
+
+.sidebar a{
+    color: var(--fontBlack);
+}
+
+.sidebar a:active{
+    color: var(--fontGold);
+}
+
+
+
 
 .open{
     width: 300px;
