--- a/styles/table.module.css
+++ b/styles/table.module.css
@@ -61,3 +61,9 @@
     padding-left: 1rem;
     margin: .5rem 1rem;
 }
+
+.clubName{
+    white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
