--- a/styles/dashCard.module.css
+++ b/styles/dashCard.module.css
@@ -13,7 +13,7 @@
     background-color: rgba(0, 0, 0, 0.322);
     position: absolute;
     bottom: 2rem;
-    left: 1rem;
+   padding-left: 1rem;
     color: var(--fontGold);
 }
 
