--- a/styles/dashCard.module.css
+++ b/styles/dashCard.module.css
@@ -15,7 +15,7 @@
     position: absolute;
     bottom: 0;
    padding-left: 1rem;
-   width: 100%;
+   width: calc(100% - 1rem);
     color: var(--fontGold);
 }
 
