--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,7 @@
 body{
     background-color: var(--borderGrey);
     margin: 0;
+    padding: 0;
 }
 
 .slick-arrow{
@@ -18,5 +19,12 @@ body{
 
 a{
     text-decoration: none;
+}
+html{
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    overflow-y: auto;
+
 }
 
