--- a/styles/carousel.module.css
+++ b/styles/carousel.module.css
@@ -2,6 +2,10 @@
     width: 90vw;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 1rem;
+    border: 1px solid var(--fontGold);
+    padding-left: 1rem;
+    border-radius: 10px;
     
 }
 
@@ -18,8 +22,13 @@
 .carouselTitle{
     font-family: strange;
     color: var(--fontGold);
-    font-size: 2rem;
-    letter-spacing: 2px;
+    font-size: 1.2rem;
+    letter-spacing: 1px;
+    border: 1px solid var(--fontGold);
+    padding: 0 1rem;
+    background-color: var(--borderGrey);
+    margin-right: 1rem;
+
 }
 
 .carouselContainer h2{
