--- a/styles/moviePreview.module.css
+++ b/styles/moviePreview.module.css
@@ -98,6 +98,7 @@
     gap: 1rem;
     justify-content: center;
     color: var(--fontGold);
+    flex-wrap: wrap;
 }
 
 .download a{
@@ -125,3 +126,4 @@
     
     }
 }
+
