--- a/styles/carousel.module.css
+++ b/styles/carousel.module.css
@@ -44,12 +44,12 @@
 
   .carouselContainer .rating{
     position: absolute;
-    font-weight: 600;
+    font-weight: 800;
     font-family: 'Monoton', cursive;
     padding: 0;
     left: -1.5rem;
     font-size: 10rem;
-    color: red;
+    color: var(--fontGold);
     top: 1px;
     z-index: 1;
   }
@@ -59,6 +59,6 @@
     text-align: right;
     color: var(--fontGold);
     display: block;
-    margin: 2rem;
+    margin: 1rem;
   }
  
