--- a/styles/sidebar.module.css
+++ b/styles/sidebar.module.css
@@ -2,7 +2,6 @@
     position: fixed;
     transition: all .3s;
     overflow: hidden;
-    top: 3rem;
     background-color:  var(--backgroundWhite);
     height: 100vh;
     box-sizing: border-box;
@@ -10,15 +9,18 @@
     padding-top:20vh;
     display: flex;
     flex-direction: column;
-    align-items: center;
     color: var(--fontBlack);
-    gap: 1rem;
-    font-size: 1.3rem;
+    gap: 2rem;
+    font-size: 1.2rem;
+    padding-left: 2rem;
+    justify-content:flex-start ;
 
 }
 
 .sidebar a{
     color: var(--fontBlack);
+    display: flex;
+    align-items: center;
 }
 
 .sidebar a:active{
@@ -29,9 +31,31 @@
 
 
 .open{
-    width: 300px;
+    width: 250px;
 }
 
 .closed{
     width: 0px;
+    padding: 0;
+}
+
+.sidebar button{
+    display: flex;
+    background-color: var(--backgroundWhite);
+    color: var(--fontBlack);
+    align-items: center;
+    border: none;
+    outline: none;
+    font-size: 1rem;
+    font-weight: 50;
+    padding: 0;
+    gap: 1px;
+}
+
+.newsLinks{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-left: 2rem;
+    overflow: hidden;
 }
