--- a/styles/newsDetails.module.css
+++ b/styles/newsDetails.module.css
@@ -27,13 +27,12 @@
 
 .secondaryMedia iframe{
     width: 100vmin !important;
-   
 }
 
 .description{
     font-size: 1rem;
     line-height: 2rem;
-    padding: 1rem;
+    padding: 0 1rem;
 }
 
 .details{
