--- a/styles/newsDetails.module.css
+++ b/styles/newsDetails.module.css
@@ -15,6 +15,7 @@
     background-color: var(--backgroundWhite);
     color: var(--fontBlack);
     overflow: hidden;
+    width: 100%;
 }
 
 .date{
@@ -40,11 +41,12 @@
     grid-template-columns: 70% 30%;
     gap: 1rem;
     padding: 2rem;
+  
 }
 
 @media screen and (max-width: 900px) {
     .details{
-        grid-template-columns: auto;
+        grid-template-columns: 100%;
         padding: .5rem;
     }
 }
