--- a/styles/newsDetails.module.css
+++ b/styles/newsDetails.module.css
@@ -50,3 +50,11 @@
         padding: .5rem;
     }
 }
+
+.secondaryImage{
+    position: relative;
+    width: 90vmin;
+    height: 70vmin;
+    margin-left: auto;
+    margin-right: auto;
+}
