--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,8 +1,11 @@
 .main{
 display: grid;
-grid-template-columns: 65% 35%;
-padding: 2rem;
-gap: 10px;
+grid-template-columns: 60% 30%;
+justify-content: center;
+gap: 1rem;
+overflow-x: hidden;
+width: 100%;
+
 }
 
 @media (max-width: 1000px) {
@@ -22,4 +25,5 @@ gap: 10px;
     display: flex;
     flex-direction: column;
     gap: 2rem;
+
 }
