--- a/styles/carousel.module.css
+++ b/styles/carousel.module.css
@@ -1,17 +1,15 @@
 .carousel{
     width: 100vw;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 1rem;
-    border: 1px solid var(--fontGold);
-    padding-left: 1rem;
+   margin: 2rem auto;
+    padding: 1rem;
     border-radius: 10px;
+    background-color: var(--backgroundWhite);
     
 }
 
 .carouselContainer img{
-    height:20%;
-    width: 90%;
+    height:12vw;
+    width: 12vw;
     border-radius: 10px;
   }
 
@@ -25,10 +23,12 @@
     color: var(--fontGold);
     font-size: 1.3rem;
     letter-spacing: 1px;
+    width: 90%;
     border: 1px solid var(--fontGold);
     padding: 0 1rem;
     background-color: var(--borderGrey);
     margin-right: 1rem;
+    font-weight: 700;
 
 }
 
@@ -38,6 +38,7 @@
     width: 80%;
     color: var(--fontGold);
     word-break: break-all;
+
   }
 
   .carouselContainer .rating{
@@ -48,7 +49,7 @@
     left: -1rem;
     font-size: 10vmax;
     color: var(--fontGold);
-    top: 1px;
+    top: -1rem;
     z-index: 1;
   }
 
@@ -58,8 +59,25 @@
     color: var(--fontGold);
     display: block;
     margin-right: 2.5rem;
-    font-weight: 800;
+    font-weight: 600;
     font-size: 1.2rem;
-    margin-bottom: 1rem;
+    margin-bottom: 5px;
+  }
+
+  @media screen  and (max-width: 700px) {
+    .carouselContainer img{
+      height:15vw;
+      width: 15vw;
+      border-radius: 10px;
+    }
   }
  
+  @media screen  and (max-width: 450px) {
+    .carouselContainer img{
+      height:22vw;
+      width: 22vw;
+      border-radius: 10px;
+    }
+  }
+
+
