--- a/styles/movieDisplay.module.css
+++ b/styles/movieDisplay.module.css
@@ -1,5 +1,5 @@
 .moviesHeader{
-    height: 80vh;
+    height: 100vh;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
@@ -23,7 +23,7 @@
     height: 40vh;
     color: white;
         text-align: center;
-        width: 90vw;
+        width: 90vmin;
         margin-left: auto;
         margin-right: auto;
         left: 0;
@@ -35,7 +35,6 @@
        
 }
 
-.gift{
-    color: red;
-    text-align: center;
+.movieDisplay{
+    background-color: var(--borderGrey);
 }
