--- a/styles/search.module.css
+++ b/styles/search.module.css
@@ -66,3 +66,9 @@
     display: flex;
     align-items: center;
 }
+
+@media screen and (max-width: 750px) {
+    .search{
+        padding: 0 1rem
+    }
+}
