--- a/styles/sidebar.module.css
+++ b/styles/sidebar.module.css
@@ -58,3 +58,94 @@
     margin-left: 2rem;
     overflow: hidden;
 }
+
+
+
+
+
+.link {
+  position: relative;
+  display: inline-block;
+  padding: 0;
+  line-height: 1em;
+  margin: 0;
+  
+  
+}
+
+.linkTop {
+  position: absolute;
+  color: var(--fontBlack);
+  top: 0;
+  display: inline-block;
+  clip-path: polygon(0% 66%, 0% 0%, 100% 0%, 100% 40%);
+  transition: transform 0.3s cubic-bezier(0.16, 1, 0.3, 1) 0.25s, color 0.5s ease 0.22s;
+}
+
+.linkTop:after {
+  content: "";
+  position: absolute;
+  
+  top: 36%;
+  left: 0;
+  width: 100%;
+  height: 4%;
+  background: var(--fontGold);
+  transform: rotateZ(-2.2deg) scaleX(0%);
+  transform-origin: right top;
+  transition: transform 0.2s ease 0.22s;
+}
+
+.linkBottom {
+  display: inline-block;
+  clip-path: polygon(0% 65%, 100% 40%, 100% 110%, 0% 110%);
+  text-decoration: underline;
+  color: var(--fontBlack);
+  transition: color 0.5s ease 0.22s, background-position 0.2s ease 0.22s;
+  text-decoration: none;
+  background-size: 200% 8%;
+  background-position: left bottom;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(to right, var(--fontGold) 50%, transparent 50%);
+  
+}
+
+
+
+.linkBottom:after {
+  content: "";
+  position: absolute;
+  
+  top: 40%;
+  left: 0;
+  width: 100%;
+  height: 4%;
+  background: var(--fontGold);
+  transform: rotateZ(-2deg) scaleX(0%);
+  transform-origin: right top;
+  transition: transform 0.2s ease 0.22s;
+}
+
+.link:hover .linkTop {
+  color: var(--fontGold);
+  transform: translateY(-0.5em) rotateZ(-3deg);
+  transition: transform 0.2s cubic-bezier(.12,.8,.57,1.00) 0.42s, color 0.5s ease 0.22s;
+}
+
+.link:hover .linkBottom {
+  color: var(--fontGold);
+  background-position: 100% bottom;
+  transition: color 0.2s ease 0.2s, background-position 0.2s ease;
+}
+
+.link:hover .linkTop:after {
+  top: 62%;
+  transform-origin: left top;
+  transform: rotateZ(-2.2deg) scaleX(100%);
+}
+
+.link:hover .linkBottom:after {
+  top: 65%;
+  transform-origin: left top;
+  transform: rotateZ(-2.1deg) scaleX(100%);
+}
