--- a/styles/dashCard.module.css
+++ b/styles/dashCard.module.css
@@ -69,7 +69,7 @@
 }
 
 .itemDate{
-    font-size: small;
+    font-size: .7rem;
     background-color: var(--fontGold);
     color: var(--backgroundWhite);
     width: fit-content;
@@ -78,11 +78,21 @@
 }
 
 .itemTitle{
-  
+  font-size: 1rem;
 }
 
 .seeMore{
     text-align: right;
     color: var(--fontGold);
     margin-right: 1rem;
+}
+
+@media screen and (max-width: 750px) {
+    .itemTitle{
+        font-size: .8rem;
+    }
+
+    .itemDate{
+        font-size: .6rem;
+    }
 }
