--- a/styles/moviePreview.module.css
+++ b/styles/moviePreview.module.css
@@ -125,6 +125,7 @@
     display: flex;
     flex-direction: column;
     color: var(--fontBlack);
+    text-align: center;
 }
 
 .changeEpisode div {
@@ -135,6 +136,8 @@
     color: var(--fontBlack);
     display: flex;
     align-items: center;
+    text-align: center;
+    justify-content: center;
  
 }
 
