--- a/styles/dashCard.module.css
+++ b/styles/dashCard.module.css
@@ -1,44 +1,18 @@
-.dashCard1 {
-    position: relative;
-    width: 100%;
-}
-
-.dashCard1Title {
-    color: var(--fontGold);
-    font-weight: 700;
-    font-size: 2rem;
-    text-overflow: ellipsis;
-    overflow: hidden;
-}
-
-.dashCard1Info {
-    background-color: rgba(255, 255, 255, 0.486);
-    position: absolute;
-    bottom: 0;
-    padding-left: 1rem;
-    width: calc(100% - 1rem);
-    color: var(--fontGold);
-    max-height: 70vmin;
-    overflow: hidden;
-   
-    
-}
-
-
 .imageContainer {
     position: relative;
     width: 100%;
-    height: 70vmin;
+    height: 100%;
 }
 
 .dashCard {
 
-    display: inline-block;
-    background-color: var(--backgroundWhite);
     border-radius: 10px;
-    cursor: pointer;
     color: var(--fontBlack);
-    width: 100%;
+    background-color: var(--backgroundWhite);
+    width: 90%;
+    margin: 2rem auto;
+    padding-top: 1rem;
+  
 }
 
 .dashCard h1 {
@@ -51,26 +25,38 @@
     font-size: 1.5rem;
 }
 
+.content {
+    display: flex;
+    width: 90%;
+    gap: 2rem;
+    flex-wrap: wrap;
+    padding: 1rem;
+    justify-content: center;
+    margin: auto;
+    background-color: var(--backgroundWhite);
+}
+
 .item {
+
+    width: 35vmin;
+    height: 55vmin;
     display: grid;
-    grid-template-columns: 4rem auto;
-    gap: 5px;
-    border-top: 5px solid var(--borderGrey);
-    margin: 0 1rem;
+    grid-template-rows: 75% 25%;
+    border-radius: 10px;
+    overflow: hidden;
 
 }
 
-.item img {
-    width: 4rem;
-}
+.item img {}
 
 
 .itemInfo {
-    display: flex;
-    flex-direction: column;
-    color: var(--fontBlack);
-    justify-content: space-between;
-    align-self: left;
+
+    background-color: var(--fontGold);
+    color: var(--backgroundWhite);
+    text-align: center;
+    padding: .5rem;
+    overflow: hidden;
 }
 
 .itemDate {
@@ -87,17 +73,22 @@
 }
 
 .seeMore {
-    text-align: right;
-    color: var(--fontGold);
-    margin-right: 1rem;
+    text-align: center;
+    color: var(--backgroundWhite);
+    background-color: var(--fontGold);
+    font-size: 1.3;
+    padding: 1rem ;
+    border-radius: 0 0 10px 10px;
+
 }
 
 @media screen and (max-width: 750px) {
-    .itemTitle {
-        font-size: .8rem;
+    .dashCard {
+        width: 90%;
     }
 
-    .itemDate {
-        font-size: .6rem;
+    .itemTitle {
+        font-size: .7rem;
     }
+
 }
