--- a/styles/loader.module.css
+++ b/styles/loader.module.css
@@ -568,7 +568,9 @@
   position: fixed;
   top: 3rem;
   background-color: var(--backgroundWhite);
-  width: 100vw;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
   padding: 1rem;
   z-index: 3;
   transition: .5s all;
