--- a/styles/sidebar.module.css
+++ b/styles/sidebar.module.css
@@ -4,16 +4,16 @@
   overflow: hidden;
   background-color: var(--backgroundWhite);
   height: 100vh;
+
   box-sizing: border-box;
   z-index: 20;
-  padding-top: 20vh;
   display: flex;
   flex-direction: column;
   color: var(--fontBlack);
   gap: 2rem;
   font-size: 1.2rem;
-  padding-left: 2rem;
-  justify-content: flex-start;
+  align-items: center;
+  justify-content: center;
 
 }
 
