--- a/styles/movieDisplay.module.css
+++ b/styles/movieDisplay.module.css
@@ -14,6 +14,7 @@
     position: relative;
 
 
+
 }
 
 .headerDetails h1 {
@@ -44,6 +45,7 @@
 
 .movieDisplay {
     background-color: var(--borderGrey);
+    overflow: hidden;
 }
 
 
@@ -53,6 +55,8 @@
     }
 
     .moviesHeader {
-        grid-template-columns: auto;
+       grid-template-columns: 100%;
     }
+
+ 
 }
