--- a/styles/sidebar.module.css
+++ b/styles/sidebar.module.css
@@ -13,7 +13,8 @@
   gap: 2rem;
   font-size: 1.2rem;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+  padding-top: 10rem;
 
 }
 
