--- a/styles/carousel.module.css
+++ b/styles/carousel.module.css
@@ -18,25 +18,27 @@
   position: relative;
   transition: all .5s;
   text-align: center;
-  width: min-content;
   border: 1px solid var(--fontGold);
   border-radius: 10px;
   background-color: var(--fontGold);
+  width: 12vw;
+
 }
 
 
 
 .carouselTitle {
-  font-family: strange;
+ 
   color: var(--fontGold);
   font-size: 1.3rem;
   letter-spacing: 1px;
-  width: 90%;
   border: 1px solid var(--fontGold);
   padding: 0 1rem;
   background-color: var(--borderGrey);
   margin-right: 1rem;
   font-weight: 700;
+  
+
 
 }
 
@@ -45,10 +47,16 @@
   font-size: 1vmax;
   text-overflow: ellipsis;
   width: 80%;
-  height: 2rem;
-  color: var(--backgroundWhite);
+  height: 2.5rem;
+  color: var(--fontBlack);
   word-break: break-all;
   padding: 10px;
+  overflow: hidden;
+ white-space: normal;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
 
 }
 
@@ -89,4 +97,13 @@
     width: 22vw;
     border-radius: 10px;
   }
+
+.carouselContainer{
+  width: 22vw;
+}
+
+.carousel h2{
+  height: 1.3rem;
+}
+
 }
