--- a/styles/dashCard.module.css
+++ b/styles/dashCard.module.css
@@ -38,8 +38,8 @@
 
 .item {
 
-    width: 35vmin;
-    height: 55vmin;
+    width: 30vmin;
+    height: 40vmin;
     display: grid;
     grid-template-rows: 75% 25%;
     border-radius: 10px;
@@ -53,7 +53,7 @@
 .itemInfo {
 
     background-color: var(--fontGold);
-    color: var(--backgroundWhite);
+    color: var(--fontBlack);
     text-align: center;
     padding: .5rem;
     overflow: hidden;
@@ -74,7 +74,7 @@
 
 .seeMore {
     text-align: center;
-    color: var(--backgroundWhite);
+    color: var(--fontBlack);
     background-color: var(--fontGold);
     font-size: 1.3;
     padding: 1rem ;
