--- a/styles/moviePreview.module.css
+++ b/styles/moviePreview.module.css
@@ -95,7 +95,7 @@
     background-color: var(--fontGold);
     border: none;
     outline: none;
-    color: var(--backgroundWhite);
+    color: var(--fontBlack);
     font-size: 1rem;
     padding: .5rem;
     border-radius: 10px;
@@ -183,7 +183,7 @@
 }
 
 .stream p{
-    color: var(--fontGold);
+    color: var(--fontBlack);
 }
 
 .serverChange{
@@ -205,7 +205,7 @@
 
 .activeLink{
     background-color: var(--fontGold) !important;
-    color: var(--backgroundWhite) !important;
+    color: var(--fontBlack) !important;
 }
 
 .downloadLinks{
