--- a/styles/carousel.module.css
+++ b/styles/carousel.module.css
@@ -33,7 +33,7 @@
   font-size: 1.3rem;
   letter-spacing: 1px;
   border: 1px solid var(--fontGold);
-  padding:  1rem ;
+  padding:  .5rem ;
   background-color: var(--borderGrey);
   margin-right: 1rem;
   font-weight: 700;
