--- a/styles/carousel.module.css
+++ b/styles/carousel.module.css
@@ -63,14 +63,16 @@
 
 .carouselContainer .rating {
   position: absolute;
-  font-weight: 800;
+  font-weight: 700;
   font-family: 'Monoton', cursive;
   padding: 0;
-  left: -1rem;
+  margin: 0;
+  left: -1.5rem;
   font-size: 10vmax;
   color: var(--fontGold);
   top: -1rem;
   z-index: 1;
+  letter-spacing: 1px;
 }
 
 
@@ -105,6 +107,9 @@
 
 .carousel h2{
   height: 1.3rem;
+}
+.carousel .rating{
+  font-size: 9vmax;
 }
 
 }
