--- a/styles/moviePreview.module.css
+++ b/styles/moviePreview.module.css
@@ -63,19 +63,21 @@
 }
 
 .trailer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 1px solid var(--fontGold);
-    position: relative;
-    width: 60%;
-    margin: 2rem auto;
-    padding-top: 2rem;
+   top: 0; 
+    position: fixed;
+    z-index: 10;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.774);
 
 }
 
 .trailer iframe {
     width: 100vmin !important;
+    position: relative !important;
+    left: 50% !important;
+    transform: translate(-50%, 0) !important;
+    margin-top: 20vh !important;
 }
 
 .trailer h3 {
@@ -228,6 +230,12 @@
     position: absolute;
     background-color: var(--backgroundWhite);
     top: -2rem;
+}
+
+.trailerButton{
+    color: var(--fontBlack) !important;
+    border-bottom: 1px solid var(--fontGold);
+    cursor: pointer;
 }
 
 @media screen and (max-width : 900px) {
