--- a/styles/carousel.module.css
+++ b/styles/carousel.module.css
@@ -1,7 +1,7 @@
 .carousel {
-  width: 100vw;
+  width: 105vw;
   margin: 1rem auto;
-  padding: 1rem;
+  padding: 0;
   border-radius: 10px;
   background-color: var(--backgroundWhite);
 
@@ -33,7 +33,7 @@
   font-size: 1.3rem;
   letter-spacing: 1px;
   border: 1px solid var(--fontGold);
-  padding:  .5rem ;
+  padding-left: 1rem;
   background-color: var(--borderGrey);
   margin-right: 1rem;
   font-weight: 700;
@@ -44,21 +44,17 @@
 }
 
 .carouselContainer h2 {
-  margin: 0;
+  margin: 0 auto;
   font-size: 1vmax;
   text-overflow: ellipsis;
   width: 80%;
   height: 2.5rem;
   color: var(--fontBlack);
-  word-break: break-all;
-  padding: 10px;
+  text-align: center !important;
   overflow: hidden;
- white-space: normal;
-  text-overflow: ellipsis;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-  display: -webkit-box;
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .carouselContainer .rating {
@@ -82,7 +78,7 @@
   display: block;
   margin-right: 4vw;
   font-size: 1.2rem;
-  margin-top: 1rem;
+  margin-top: 5px;
 }
 
 @media screen and (max-width: 700px) {
@@ -103,10 +99,12 @@
 
 .carouselContainer{
   width: 22vw;
+
 }
 
 .carousel h2{
   height: 1.3rem;
+  overflow: hidden;
 }
 .carousel .rating{
   font-size: 9vmax;
