--- a/styles/moviePreview.module.css
+++ b/styles/moviePreview.module.css
@@ -185,6 +185,11 @@
 
 }
 
+.stream img{
+    height: 100% !important;
+    width: 100%;
+}
+
 .stream video{
     width: 100vmin !important;
     height: 360px;
