--- a/styles/moviePreview.module.css
+++ b/styles/moviePreview.module.css
@@ -171,6 +171,18 @@
     color: var(--fontBlack);
 }
 
+.vidPlayer{
+    position: relative;
+}
+.streamAd{
+    
+    z-index: 3;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+}
 .stream h2 {
     color: var(--fontGold);
     position: absolute;
