--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,15 +47,9 @@ html {
     align-items: center;
 }
 
-.mobileTop{
-  width: 320px; 
-  height: 100px;
-   border: 0px;
-    padding: 0;
-     overflow:hidden;
-      background-color: transparent;
+.mobile{
+  display: none;
 }
-
 .pcTop{
   width: 728px; 
   height: 90px;
@@ -74,13 +68,8 @@ html {
       background-color: transparent;
 }
 
-.pcBottom{
-  width: 728px; 
-  height: 90px;
-   border: 0px;
-    padding: 0;
-     overflow:hidden;
-      background-color: transparent;
+.pc{
+ display: block;
 }
 
 .slick-arrow{
@@ -117,5 +106,11 @@ html {
         width: 2.5rem !important;
     }
     
+    .mobile{
+      display: block;
+    }
    
+    .pc{
+      display: none;
+    }
   }
