--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,9 +47,15 @@ html {
     align-items: center;
 }
 
-.mobile{
-  display: none;
+.mobileTop{
+  width: 320px; 
+  height: 100px;
+   border: 0px;
+    padding: 0;
+     overflow:hidden;
+      background-color: transparent;
 }
+
 .pcTop{
   width: 728px; 
   height: 90px;
@@ -68,8 +74,13 @@ html {
       background-color: transparent;
 }
 
-.pc{
- display: block;
+.pcBottom{
+  width: 728px; 
+  height: 90px;
+   border: 0px;
+    padding: 0;
+     overflow:hidden;
+      background-color: transparent;
 }
 
 .slick-arrow{
@@ -106,11 +117,5 @@ html {
         width: 2.5rem !important;
     }
     
-    .mobile{
-      display: block;
-    }
    
-    .pc{
-      display: none;
-    }
   }
